--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     //https://github.com/ReactiveX/RxJava
     implementation "io.reactivex.rxjava3:rxjava:3.0.6"
 
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 }
